--- a/assets/package.json
+++ b/assets/package.json
@@ -6,8 +6,12 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "formdata-polyfill": "^3.0.18",
+    "mdn-polyfills": "^5.16.1",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "phoenix_live_view": "file:../deps/phoenix_live_view",
+    "url-search-params-polyfill": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
