--- a/assets/package.json
+++ b/assets/package.json
@@ -6,6 +6,7 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "bulma": "^0.7.5",
     "formdata-polyfill": "^3.0.18",
     "mdn-polyfills": "^5.16.1",
     "phoenix": "file:../deps/phoenix",
