--- a/assets/package.json
+++ b/assets/package.json
@@ -18,12 +18,12 @@
     "@babel/core": "^7.5.4",
     "@babel/preset-env": "^7.5.4",
     "babel-loader": "^8.0.0",
-    "copy-webpack-plugin": "^4.5.0",
+    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^2.1.1",
     "mini-css-extract-plugin": "^0.4.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "uglifyjs-webpack-plugin": "^1.2.4",
-    "webpack": "4.4.0",
+    "webpack": "^4.41.6",
     "webpack-cli": "^3.3.5"
   }
 }
